docs: 前端周刊笔记更新

--- a/fe_blog/2022_05_fe_week.md
+++ b/fe_blog/2022_05_fe_week.md
@@ -42,7 +42,72 @@ Web font 支持了在网页中访问本地字体的功能（Local Font Access AP
 
 ### 奇舞周刊
 * [445期](https://weekly.75.team/issue445.html) 9篇博文
-
+* [Web页面全链路性能优化指南](https://mp.weixin.qq.com/s?__biz=Mzg4NTE3NTY4Mg==&mid=2247485744&idx=1&sn=fd04230edff9c4291ac132c956266dfd&chksm=cfadadddf8da24cb447d3b5194ee54e19875a2d5974f7f34ec571634e1ea0708c163c4d084cd&token=1008676742&lang=zh_CN#rd) 比较全面的Web性能优化博文
+* [ESBuild & SWC浅谈: 新一代构建工具](https://mp.weixin.qq.com/s?__biz=MzkxNTIwMzU5OQ==&mid=2247493641&idx=1&sn=f8378c131fe43e7d4ef41ce9f01a1bde&chksm=c1601b69f617927fc4fcc9ad19cd34598fae06109e18a44fc8e6c7aee98fc72d58ea755d0360&token=1008676742&lang=zh_CN#rd) 目前这两个工具还不能完全替代Webpack等主流工具这些年发展出的庞大生态
+```
+ESBuild[1]是基于Go语言开发的JavaScript Bundler, 由Figma前CTO Evan Wallace开发, 并且也被Vite用于开发环境的依赖解析和Transform.
+SWC[2]则是基于Rust的JavaScript Compiler(其生态中也包含打包工具spack), 目前为Next.JS/Parcel/Deno等前端圈知名项目使用.
+```
+* [奇妙的 CSS MASK](https://mp.weixin.qq.com/s?__biz=Mzg2MDU4MzU3Nw==&mid=2247491371&idx=1&sn=f0c87cdbce78fedcef2d616c1da0b340&chksm=ce257cddf952f5cbfe4f735f7f6c801357c8a8a2772167f6ccce910db6fc5494189414e08817&token=1008676742&lang=zh_CN#rd)mask 其实还是属于一个比较冷门的属性。在日常业务中能运用上的机会不多。而且兼容性不算特别好，打开 MDN，可以看到，除了 mask 本身，还有很多与 mask 相关的属性，只是目前大部分还属于实验室阶段。
+* [前端历史项目的 Vite 迁移实践总结](https://mp.weixin.qq.com/s/kpi82Rb66bUQuA_G0hrqBw) Vite 落地实践小结，一个下午就完成迁移？不太可信
+* [【工程化】探索webpack5中的Module Federation](https://mp.weixin.qq.com/s?__biz=Mzg2MDY5MTMxOA==&mid=2247485894&idx=1&sn=debfda7356d2d3098c78bd0f436c1510&chksm=ce23c7dff9544ec9e869897401868375001448f458702718bf77d66c9f7ef709572d986aee0f&token=1008676742&lang=zh_CN#rd) 使用 Module Federation，我们可以在一个应用中动态加载并执行另一个应用的代码，且与技术栈无关，并且能够共享模块，从而减小编译时间以及降低包体积，但在使用 Module Federation 的时候也需要权衡模块拆分的粒度以及做好版本的控制
+* [[科普] Service Worker 入门指南](https://mp.weixin.qq.com/s?__biz=Mzg3OTYwMjcxMA==&mid=2247487147&idx=1&sn=77096d7a944c83e50a23bc806dfe5565&chksm=cf00b3d2f8773ac4a1251e14bc546b351328f008890dad56534b5f6d1fc204b37d029bebf09b&token=1008676742&lang=zh_CN#rd) Service Worker  简单的入门教程
+* [比Chrome快3倍，更安全、快速且私密的网络浏览器，Brave Browser(开源、免费、跨平台)](https://mp.weixin.qq.com/s?__biz=Mzk0MDI0NzgxNA==&mid=2247491483&idx=1&sn=27fce6ac85668674e5f7221ffc0f112f&chksm=c2e5c1f2f59248e4098d05441bd99dcd2e8798a028db8c6c34fb3f441504bab9671f5f46595d&token=1008676742&lang=zh_CN#rd) 国外新浏览的推广软文
+* [React 18.1、Firefox 100、Jest 28发布; Edge超越Safari成为桌面端第二大浏览器](https://mp.weixin.qq.com/s?__biz=MzU2MTIyNDUwMA==&mid=2247497187&idx=1&sn=c58e4c12125620aed8c52e67fea87ba9&chksm=fc7ebbb8cb0932aef22b82ccf9ef57dbc7921173963467389c8da8891ab044d08a99c53d1810&token=1008676742&lang=zh_CN#rd) 竟然在A前端周刊里看到B前端周刊
+* [Node.js 18 新特性解读](https://zhuanlan.zhihu.com/p/502951532) 一句话点评：std lib 在标准化，user lib 在精细化。
 
 ### 政采云前端周刊
 * [184期](https://weekly.zoo.team/detail/184) 暂无博文
+
+
+## 2022-05-09 ~ 2022-05-15
+### 科技爱好者周刊
+* [206期 - 如何走出失望和怀疑](https://github.com/ruanyf/weekly/blob/master/docs/issue-206.md) 
+```
+香水导购器，原理是记录脑电波对不同香水的反应，判断消费者的情绪，给出推荐。这个原理似乎也可以用于推荐其他商品。
+咬牙验证，原理是，每个人咬牙发出的声音，经过牙齿结构（咬合的类型、力度、有无蛀牙或假牙等等）和耳道，会形成独一无二的声波，被耳机接受到，从而验证身份。
+苹果公司的可穿戴业务（耳机+手表），已经超过了 Mac 业务。
+全民级 AR 应用 Snapchat，社交软件 Snapchat 整合了大量 AR 功能，成为了业内唯一名副其实的 AR 应用。
+河南通信服务商（电信、移动、联通）为了防止境外电信诈骗，默认关闭境外短信接收，需要用户手动发短信打开，估计其他省很快会跟进。有些境外网站会通过短信发验证码，因此需要注意这个问题。
+无限温度的颜色 - 颜色将是 sRGB(148,177,255);
+1994年的皮克斯午餐， 《玩具总动员》 1994年， 《虫虫危机》 1998年， 《怪兽电力公司》 2001年， 《海底总动员》 2003年， 《瓦力》 2008年。
+
+语文课总是偏爱讲授那些很美、很有诗意的散文和小说，这是不对的，就像篮球课不应该鼓励学生进行花哨的运球。写作最重要的目标是写得清楚，此后才考虑写得有诗意。
+```
+* [Postgres.js](https://github.com/porsager/postgres) Node.js 和 Deno 的 PostgreSQL 数据库操作库。
+* [Geeker Admin](http://admin.spicyboy.cn/#/proTable/useComponent) 一款基于 Vue3 的后台管理系统。
+
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [446期](https://weekly.75.team/issue446.html) 8篇博文
+
+### 政采云前端周刊
+* [185期](https://weekly.zoo.team/detail/185) 3篇博文
+
+## 2022-05-16 ~ 2022-05-22
+### 科技爱好者周刊
+* [207期 - 汽车行业的顶峰可能过去了](https://github.com/ruanyf/weekly/blob/master/docs/issue-207.md) 
+```
+中国汽车销售最多的年份， 五年前的2017年，当年总共销售了近2900万辆，以后再也没有超过这个数字。2020年下降到2531万辆，去年2021年有所反弹，达到2627万辆。
+首先，汽车是一种不划算、不环保的消费品。其次，长时间开车的体验一点都不好。最后，互联网减少了交通需求。
+
+说到清洁能源，大家想到的都是水力、太阳能、风能、潮汐能等等，很少有人了解，地热也是一种清洁能源。因为地球本身就是一个巨大的核电站，我们只需要用管道，将地下的热量引导到地球表面，就能驱动涡轮机发电。
+
+有一句古老的工程格言：工期短、质量好、价格便宜，这三项里面你最多只能同时做到两项。
+```
+* [收入增量达千亿？中国第四家电信运营商来了！](https://wallstreetcn.com/articles/3659441) 中国广电，会是 移动、联动、电信外的第四家电信运营商
+* [VS code在线版](https://vscode.dev/) 网页版
+* [代码编辑器比较：Ace、CodeMirror 和 Monaco](https://blog.replit.com/code-editors) 三种在线编辑器比较
+* [云策文档](https://github.com/fantasticit/think) 一款开源知识管理工具，可以自己部署。通过独立的知识库空间，结构化地组织在线协作文档，支持多人协作文档。
+* [19种设计模式学习](https://refactoringguru.cn/design-patterns) 每一种设计模式都配上了插图讲解。
+* [前端部署十五章](https://q.shanyue.tech/deploy/) 一组系列文章，介绍如何部署前端项目。从最原始的部署方案过渡到 Docker 与 Kubernetes，逐步优化，另有配套的 视频讲解；
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [447期](https://weekly.75.team/issue447.html) 9篇博文
+
+### 政采云前端周刊
+* [186期](https://weekly.zoo.team/detail/186) 4篇博文
