docs: 前端周刊笔记更新

--- a/fe_blog/2022_05_fe_week.md
+++ b/fe_blog/2022_05_fe_week.md
@@ -82,9 +82,20 @@ SWC[2]则是基于Rust的JavaScript Compiler(其生态中也包含打包工具sp
 
 ### 奇舞周刊
 * [446期](https://weekly.75.team/issue446.html) 8篇博文
+* [React 并发渲染的前世今生](https://mp.weixin.qq.com/s/01sTK6w4BFUzoRc2NKCs1w) 详细讲述了 React 实现并发渲染的历史，React团队花费了2161天实现
+* [如何基于 WebComponents 封装 UI 组件库](https://mp.weixin.qq.com/s/UTGADsfmJXSg5zGik4Rb5g) Web Components 是一套不同的技术，允许您创建可重用的定制元素（它们的功能封装在您的代码之外）并且在您的 web 应用中使用它们。Edge 也换成 webkit 内核了，离全面支持应该也不远了。
+* [前端视角解读 Why Rust](https://mp.weixin.qq.com/s/AXXJnFdwYDiy5vfZ-fvVDQ) 目前 Rust 对 WebAssembly 的支持是最好的，对于前端开发来说，可以将 CPU 密集型的 JavaScript 逻辑用 Rust 重写，然后再用 WebAssembly 来运行，JavaScript 和 Rust 的结合将会让你获得驾驭一切的力量。
 
 ### 政采云前端周刊
 * [185期](https://weekly.zoo.team/detail/185) 3篇博文
+* [前端组件设计之理论篇](https://juejin.cn/post/7093780248570888228) 组件：视图逻辑和非视图逻辑的组合
+* [8 种技巧让你编写更简洁的 JavaScript 代码](https://mp.weixin.qq.com/s/nEBp9YYUYFLP8O3xJfbm9A) 很常见的编码小总结
+* [这款前端可视化代码执行工具，打残js执行过程](https://mp.weixin.qq.com/s/hOwPexJThV7i23zcA94z0g) 不错的小工具，但不实用
+* [vue项目你一定会用到的性能优化！](https://mp.weixin.qq.com/s?__biz=MzI4OTY2MzE0OA==&mid=2247499195&idx=1&sn=e3f08d9cdbdc1ac97e458b35018228ff&scene=21#wechat_redirect) vue的这些优化，通用适用于React
+* [浅谈逻辑选择器 is、where、not、has](https://mp.weixin.qq.com/s/QBEYNDJz54qcAo1IVZ45pg) CSS新特性用法
+* [Chrome插件：云音乐听歌识曲](https://mp.weixin.qq.com/s/ACXVM0KiwicR8d53JF_vhQ) 浏览器插件开发， manifest v2（MV2） 即将被废弃，在 2022 年逐步不接受更新，2023 年将会逐步不能运行，本文所有的内容都是基于更安全、性能更好、隐私更强的 manifest v3（MV3）进行实现。
+* [Server Components：我们即将和 API 告别？](https://mp.weixin.qq.com/s/CL1YMnQ6dJfH-YMY9TBcGw) React Server Component。一种只运行在服务端的 React 组件化能力。我们可以让前端的 React 组件，运行在后端？这就是 React Server Components。
+* [以 Log4j 为例，如何评估和划分安全风险](https://mp.weixin.qq.com/s/2eCzDAX4orgEXu1rvhZSNA) 5个方面处理第三方库安全风险
 
 ## 2022-05-16 ~ 2022-05-22
 ### 科技爱好者周刊
