docs: 前端周刊笔记更新

--- a/fe_blog/2022_05_fe_week.md
+++ b/fe_blog/2022_05_fe_week.md
@@ -119,6 +119,19 @@ SWC[2]则是基于Rust的JavaScript Compiler(其生态中也包含打包工具sp
 
 ### 奇舞周刊
 * [447期](https://weekly.75.team/issue447.html) 9篇博文
+* [Vue 性能指标逐渐开始反超 React 了！](https://mp.weixin.qq.com/s?__biz=MzkxMjI3MTA1Mg==&mid=2247518927&idx=1&sn=e1675770f2827ddc177e0b0f837135b6&chksm=c10db96cf67a307a56ca3c7d15047cc73fb74ad35ae595e58285d879ea1f49312c1341f7e991&token=868444553&lang=zh_CN#rd) 前端开发框架有：Vue、React、Angular JS、Angular、Preact、Svelte、Next.js、Nuxt.js、SvelteKit.
+* [一文看透 Module Federation](https://mp.weixin.qq.com/s/WCQvPbd_w8P-Tn36Sc0SXQ) Webpack5 的新特性 Module Federation 可以很好解决代码共享的问题.
+* [焕然一新的 Vue3 中文文档来了！](https://mp.weixin.qq.com/s/xajtqF0eaesrtZmifq4BuQ) Vue3 中文文档改版了
+* [性能优化——图片压缩、加载和格式选择](https://mp.weixin.qq.com/s?__biz=Mzg3NTcwMTUzNA==&mid=2247486786&idx=1&sn=f9f805bd4572c5a0854d50817ceb0652&chksm=cf3c3933f84bb025659ed77d80002de55db633ac465cf61c9e14b704959b0037867d3e7a4844&token=868444553&lang=zh_CN#rd) 针对图片的性能优化， 压缩图片、选择正确格式、 CDN 加速、懒加载等。
+* [深入浅出 WebRTC 传输协议](https://mp.weixin.qq.com/s?__biz=MzkxNTIwMzU5OQ==&mid=2247493675&idx=1&sn=855460a1c737b2c04138ce6b25d43a04&chksm=c1601b4bf617925d04016e698a9a150c57e04dd2e9e17e1acec0a4f640d732e43308310472bc&token=868444553&lang=zh_CN#rd) RTC 是 Real-Time Communication 的简写，正如其中文名称 “即时通讯” 的意思一样，RTC 协议被广泛用于各种即时通讯领域
+* [迄今为止最全的前端监控体系搭建篇(长文预警)](https://mp.weixin.qq.com/s/7c0yqwSxK-FvLm1iKZrjmQ) 比较全的前端性能监控方案
+* [下月退役！27 年 IE 终落幕，再见 IE，你好 Edge](https://www.infoq.cn/news/BNMm3Yom5HqYmG4iTEVc) IE 退役，Edge 接力
+* [开发者如何保持心理健康以应对职业 "倦怠危机" 呢？](https://mp.weixin.qq.com/s/efN2Nyo7fGtW_cyn3Hg4QA) 减轻压力的最佳方式之一是体育锻炼。
+* [W3C重点报告·2022年4月版](https://mp.weixin.qq.com/s/DUIBQ591IZpkcdnmOVIQnA)
 
 ### 政采云前端周刊
 * [186期](https://weekly.zoo.team/detail/186) 4篇博文
+* [RESTful API规范](https://blog.csdn.net/gouguofei/article/details/109115268) 文章还有几个错别字，不收录
+* [Google IO 2022 —— CSS 全览](https://mp.weixin.qq.com/s/Y2L2F1vmRXfacE1KwM00hQ) 2022年将成为 CSS 最伟大的一年。无论是在功能还是合作浏览器的功能发布方面，合作目标是实现 14 个功能。
+* [Server Components：我们即将和 API 告别？](https://mp.weixin.qq.com/s/CL1YMnQ6dJfH-YMY9TBcGw) 奇舞周刊已收录
+* [1.4w字总结带你重学TypeScript](https://juejin.cn/post/7096695346239111199) 重新学习 TS
