docs: 前端周刊笔记更新

--- a/fe_blog/2022_05_fe_week.md
+++ b/fe_blog/2022_05_fe_week.md
@@ -135,3 +135,40 @@ SWC[2]则是基于Rust的JavaScript Compiler(其生态中也包含打包工具sp
 * [Google IO 2022 —— CSS 全览](https://mp.weixin.qq.com/s/Y2L2F1vmRXfacE1KwM00hQ) 2022年将成为 CSS 最伟大的一年。无论是在功能还是合作浏览器的功能发布方面，合作目标是实现 14 个功能。
 * [Server Components：我们即将和 API 告别？](https://mp.weixin.qq.com/s/CL1YMnQ6dJfH-YMY9TBcGw) 奇舞周刊已收录
 * [1.4w字总结带你重学TypeScript](https://juejin.cn/post/7096695346239111199) 重新学习 TS
+
+## 2022-05-23 ~ 2022-05-29
+### 科技爱好者周刊
+* [208期 - 晋升制度的问题](https://github.com/ruanyf/weekly/blob/master/docs/issue-208.md) 
+```
+谷歌的晋升机制; 
+如果你连续好几年没有获得晋升，就是一个危险的信号， 大厂员工的行为都是晋升导向。导致的问题：
+1）晋升标准与公司利益并不完全一致，员工追求晋升和短期绩效，可能不会导致公司利益最大化，甚至会伤害公司的长期利益。
+2）晋升导向强化了等级制，在公司中引入过多的层级。
+3）晋升导向人为制造了一个气氛很可怕的“晋升季”。
+4）晋升导向造成一种不良的公司文化。
+
+世界最高输电塔最近在江苏完工，开始架设电线。铁塔一共有两座，跨越长江，一座在长江南岸的无锡，另一座在北岸的泰州，高度均为385米，比埃菲尔铁塔还高出61米。
+杭州市的一座造型奇特的“未来停车楼”即将完工。这个停车楼做成了一个地面公园，大屋顶下方有10个塔楼，里面可以停车。屋顶上方将做成公共绿地。
+本文认为刚刚举办的谷歌 I/O 2022大会完全失败，根本没有拿出让大家兴奋的新产品，而是把那些已经失败好几年的产品重新捡起来：安卓平板、谷歌钱包、谷歌眼镜、安卓手表…… 作者认为，谷歌这家公司似乎迷惘了。它迫切需要告诉大家，它的战略方向是什么。
+
+你的位置决定了你所看到的。当你坐在前排，实际做事时，你看到的东西、你的视野是后排的人所没有的。如果后排的人说一些没有意义的话，你就忽略它，并继续前进。
+```
+* [Yaade](https://github.com/EsperoTech/yaade) 一个开源的 API 开发环境，相当于开源的 Postman。
+
+### 知乎： 前端快爆
+* 暂无
+### 奇舞周刊
+* [448期](https://weekly.75.team/issue448.html) 8篇博文
+* [Web 应用开发进化论](https://mp.weixin.qq.com/s/RJ2c7k577XdZ3LhXHHeXMQ) 国外译文，由浅入深讲述 Web 站点运行、解析原理， 翻译的还不错。
+* [JavaScript中的继承和组合](https://mp.weixin.qq.com/s/mJCoubKJne2uLCDcZoseMw) 国外译文， 详细讲解编码的  继承 和 组合 
+* [HTTP 的缓存为什么这么设计？](https://mp.weixin.qq.com/s/0P8_lnVf2_zMzIBJ20qajA) 简单介绍了HTTP 1.0， HTTP 1.1 的缓存机制
+* [UMI3源码解析系列之构建原理](https://mp.weixin.qq.com/s/2MsgPh9AZtUoJpsLLdOynQ) umi是一个插件化的企业级前端框架
+* [探索 webpack5 中的 Module Federation](https://mp.weixin.qq.com/s/zt7x2KjMT_cWvLVVa2-Hww) 重复博文
+* [中后台 CSS Modules 最佳实践](https://mp.weixin.qq.com/s/qUiiUkKOyW-QnBz1WEOTwQ) CSS Modules 无疑是一种彻底解决样式冲突问题的方法。
+* [“史上最严”数据保护法GDPR是如何失败的？](https://mp.weixin.qq.com/s/HmUsQS2L4nni15fUbo1grg) 1.裁决效率低； 2.科技公司难遵守； 
+* [都2022年了，一个还不知道Lottie动画的前端已经OUT啦！](https://juejin.cn/post/7101629986427109383) 标题党！Lottie是一款由airbnb开源的跨平台动画渲染库，支持Android, iOS, Web, Windows平台。是专门用于解析从AE(Adobe After Effects)中通过Bodymovin插件导出的JSON文件，直接渲染动画。
+### 政采云前端周刊
+* [187期](https://weekly.zoo.team/detail/187) 3篇博文
+* [TS 进阶：递归类型实战](https://juejin.cn/post/7098027461195071519) TS 在我看来是非常不适合前端来写的，至少是不适合在项目中普及的。 年轻的作者， 干货不够，不收录；
+* [如何把前端项目写成一座屎山？](https://juejin.cn/post/7086735198942920712) 如何编写低质代码 指南？
+* [硬核冷知识：V8与WebAssembly不得不说的秘密](https://laocuicode.cn/daydream/2022/04/01/202241-%E7%A1%AC%E6%A0%B8%E5%86%B7%E7%9F%A5%E8%AF%86%EF%BC%9AWebAssembly/)
