docs: 更新前端周刊笔记

--- a/fe_blog/2022_06_fe_week.md
+++ b/fe_blog/2022_06_fe_week.md
@@ -31,7 +31,18 @@
 ## 2022-06-06 ~ 2022-06-12
 
 ### 科技爱好者周刊
-* 暂无
+* [209期](https://github.com/ruanyf/weekly/blob/master/docs/issue-209.md) 程序员是怎样的人
+```
+我最近看到一个令人深思的心理学实验，叫做“斯坦福监狱实验”: 人类行为受到工作环境的强烈影响，你会变成环境要求你成为的样子。 
+
+有些名贵的食用鱼（大黄鱼、石斑鱼、鲑鱼等）不适合近海养殖，一家青岛公司就制造了全球最大的10万吨养殖船“国信1号”，开到远海，在船里养鱼。
+
+用代码量来考核程序员，相当于用药方来评价医生，用药多的医生，就是好医生。 -- 知乎网友
+
+我们不搞培养制，我们没有责任培养你，我们是选拔制，选拔更优秀的人上来，在全公司和全世界范围内选拔优秀者，落后者我们就淘汰。-- 任正非
+```
+* [手机号“一键解绑”功能来了！覆盖微博淘宝等](https://www.sohu.com/a/555332422_120388781) 较实用的功能
+* [三分钟读懂 NFT 和数字藏品](https://mp.weixin.qq.com/s/IwbB4ZwPn-8xSHlAY9EIRA) NFT “去中心化” 还是 离不开 “中心化”， 倾向于 “数字营销”
 
 ### 知乎： 前端快爆
 * [技术周刊 2022-06-06：TS 4.7 发布，正式在 Node.js 中支持 ESM；Firefox 101 新增三种新的视口尺寸；Electron 19.0 发布](https://zhuanlan.zhihu.com/p/525058664)
@@ -47,9 +58,17 @@ preloadURL 属性已从 WebPreferences 中移除，使用 WebPreferences.preload
 ```
 
 ### 奇舞周刊
-
-
+* [450期](https://weekly.75.team/issue450.html) 8篇博文
+* [APP常用跨端技术栈深入分析](https://mp.weixin.qq.com/s/-IoiOSSMOORzZXLUiZsGtw) APP 跨端技术小结， 不包括 小程序
+* [用 Node.js 手写一个 DNS 服务器](https://mp.weixin.qq.com/s/Gl94ISY5N4BYyYmVT9-QFQ) DNS 是实现域名到 IP 转换的网络协议，当访问网页的时候，浏览器首先会通过 DNS 协议把域名转换为 IP，然后再向这个 IP 发送 HTTP 请求。
+* [为什么我避免使用async/await？](https://juejin.cn/post/7106481255096516638) 翻译味道较重，一家之言， 有争议的论点，不收录
+* [浅析 path 常用工具函数源码](https://mp.weixin.qq.com/s/mbQC-NVlHg-7QW1c8T8xbA) 深入Node.js Path 模块
+* [使用 content-visibility 优化渲染性能](https://mp.weixin.qq.com/s/o9lpl7CTwcbjM0q3QMRLTg) 用于无限滚动的新CSS样式
+* [自己实现一个大文件切片上传+断点续传](https://mp.weixin.qq.com/s/SyP0zUsRHsTDyEQoab4fXg) 实现上传切片的代码实现思路
+* [关于代码评审(CodeReview)那些不得不说的事儿](https://mp.weixin.qq.com/s/EvQzG5esLfWAWbqflkU0WA) CodeReview 应该是一项类似长期运动的持续行为
+* [是Rust太难了，还是主流编程本来就这么折磨人？](https://mp.weixin.qq.com/s/kUtMIfl74ejMlQHTax00bQ) 很多问题源自某种微妙的语言 bug， 简直神奇
 ### 政采云前端周刊
-
+* [189期](https://weekly.zoo.team/detail/189) 
+* 暂无
 
 
