docs: 前端周刊笔记更新

--- a/fe_blog/2022_05_fe_week.md
+++ b/fe_blog/2022_05_fe_week.md
@@ -169,6 +169,8 @@ SWC[2]则是基于Rust的JavaScript Compiler(其生态中也包含打包工具sp
 * [都2022年了，一个还不知道Lottie动画的前端已经OUT啦！](https://juejin.cn/post/7101629986427109383) 标题党！Lottie是一款由airbnb开源的跨平台动画渲染库，支持Android, iOS, Web, Windows平台。是专门用于解析从AE(Adobe After Effects)中通过Bodymovin插件导出的JSON文件，直接渲染动画。
 ### 政采云前端周刊
 * [187期](https://weekly.zoo.team/detail/187) 3篇博文
-* [TS 进阶：递归类型实战](https://juejin.cn/post/7098027461195071519) TS 在我看来是非常不适合前端来写的，至少是不适合在项目中普及的。 年轻的作者， 干货不够，不收录；
+* [TS 进阶：递归类型实战](https://juejin.cn/post/7098027461195071519) 
+> TS 在我看来是非常不适合前端来写的，至少是不适合在项目中普及的。 
+观点过于片面，作者图样， 干货不够，不收录；
 * [如何把前端项目写成一座屎山？](https://juejin.cn/post/7086735198942920712) 如何编写低质代码 指南？
 * [硬核冷知识：V8与WebAssembly不得不说的秘密](https://laocuicode.cn/daydream/2022/04/01/202241-%E7%A1%AC%E6%A0%B8%E5%86%B7%E7%9F%A5%E8%AF%86%EF%BC%9AWebAssembly/)
