--- a/fe_blog/2022_06_fe_week.md
+++ b/fe_blog/2022_06_fe_week.md
@@ -66,9 +66,59 @@ preloadURL 属性已从 WebPreferences 中移除，使用 WebPreferences.preload
 * [使用 content-visibility 优化渲染性能](https://mp.weixin.qq.com/s/o9lpl7CTwcbjM0q3QMRLTg) 用于无限滚动的新CSS样式
 * [自己实现一个大文件切片上传+断点续传](https://mp.weixin.qq.com/s/SyP0zUsRHsTDyEQoab4fXg) 实现上传切片的代码实现思路
 * [关于代码评审(CodeReview)那些不得不说的事儿](https://mp.weixin.qq.com/s/EvQzG5esLfWAWbqflkU0WA) CodeReview 应该是一项类似长期运动的持续行为
+```
+https://github.com/geekan/HowToLiveLonger 《程序员延寿指南》
+```
 * [是Rust太难了，还是主流编程本来就这么折磨人？](https://mp.weixin.qq.com/s/kUtMIfl74ejMlQHTax00bQ) 很多问题源自某种微妙的语言 bug， 简直神奇
 ### 政采云前端周刊
 * [189期](https://weekly.zoo.team/detail/189) 
 * 暂无
 
+## 2022-06-13 ~ 2022-06-19
 
+### 科技爱好者周刊
+* [210期](https://github.com/ruanyf/weekly/blob/master/docs/issue-210.md) 为什么软件变得复杂
+```
+软件肯定会越变越复杂！
+大家通常认为，复杂系统往往会在经济繁荣的时候崩溃，因为业务太多，支撑不过来，但他认为不是这样的，系统崩溃往往发生在经济收缩期。
+经济繁荣时期，软件公司会大量雇佣新员工，投入更多的财力和人力，支撑复杂系统。等到经济收缩期，公司开始减少投入、冻结招聘或裁员，复杂系统可能就会在这个时候出问题，变得难以维护。现在就是经济收缩期，那么接下来，会不会就是软件故障的高发期，我们将看到很多复杂系统的崩溃？
+
+最近几年（2013 ~ 2022）前端技术趋于稳定， 前端团队也转向了精细化探索；
+5月30日，国际篮联正式宣布，允许篮球世界杯等大赛启用 LED 篮球场。LED 球场有很多好处，省去了划线的麻烦，能够快速切换成篮球场、手球场、排球场、羽毛球场。
+
+IT 行业与传统制造业有一个重要区别，就是 IT 行业有着严重的垄断。
+全世界的智能手机有70亿部，比汽车多出5倍（14亿辆）。但是，智能手机制造商比汽车制造商少了好几个数量级。搜索引擎、社交网络、操作系统都是这样，几个巨头就垄断了整个市场。
+
+2021年只有两种人在写博客，一种是试图建立受众并从中获利的人，另一种是只想写出想法、而没有任何目标的人。
+这两种人的行为都非常好。选择做你喜欢的事，坚持下去，它们最终都可以对他人产生价值。
+```
+* [微信读书插件](https://secreter.github.io/ireader/index.html) 支持划线生成图片书签、划线同步笔记到第三方、 一键导出笔记、更换主题、代码块高亮、更换字体、查看阅读进度等。
+* [Fresh 框架](https://fresh.deno.dev/) 上周，基于 Deno 的 Fresh 框架发布了预览。该框架直接使用 TypeScript 脚本，号称零配置、零构建，页面由服务端渲染，客户端不需要 JS 生成内容，也没有多余的 JS 脚本，追求小而快，值得关注。
+* [Aleph.js](https://alephjs.org/) Aleph.js 是另一个基于 Deno 的全栈框架，类似于 Next.js，目前处于早期开发阶段，也可以关注。
+* [Express](https://expressjs.com/) 牌的 Node.js 框架 Express，最近要发布5.0版了。这是一件大事，因为4.0版是八年前发布的。这篇文章介绍了5.0版的新特性。
+### 知乎： 前端快爆
+* 暂无
+
+### 奇舞周刊
+* [451期](https://weekly.75.team/issue451.html) 9篇博文
+* [IE 浏览器已“死”，一个时代的终结](https://mp.weixin.qq.com/s/pmd22EIxa7EwzQUw-Zg4jw) 北京时间 2022 年 6 月 16 日，IE 浏览器正式退役，之后将由 Edge 浏览器接棒继续提供服务。
+* [JS 运行机制最全面的一次梳理](https://mp.weixin.qq.com/s/PhuhUtQGz0uPxVrtNB4TCA) 本文适合有一定经验的前端人员，新手请规避，避免受到过多的概念冲击。
+* [Vue3.0 响应性原理](https://mp.weixin.qq.com/s/7JnXUPmYRCYlWZoxop01ZA) 简述Vue2 和 Vue3 响应式实现原理
+* [作业帮直播间前端架构优化实践](https://mp.weixin.qq.com/s/zVRLRV16vr8eudFcVKqm2w) 直播间架构性能优化实践小结
+* [JS实现将文本或JSON内容下载到文件中](https://mp.weixin.qq.com/s/RMjIe5ISPq3AOv9aNT_-2Q) 简单讲述 Blob对象用法，Blob 对象表示一个不可变、原始数据的类文件对象。
+* [深度剖析 VS Code JavaScript Debugger 功能及实现原理](https://mp.weixin.qq.com/s/9FoyLqROYXaTjivbF4KUlg) VS Code 在 1.47 版本 中废弃了旧版本的 Node Debug。
+* [被捧上天的Scrum敏捷管理为何不受大厂欢迎了？](https://mp.weixin.qq.com/s/UxhaojhwLaG1m5tD47WCgg) 互联网功能团队管理方式介绍
+* [HTTP/3 发布！](https://mp.weixin.qq.com/s/40YBEWZBaHakDuRuh27fMg) 2020年6月6日, 历时 5 年，HTTP/3 终于被标准化为 RFC 9114。
+* [国际化和多语言网站](https://mp.weixin.qq.com/s/PYGZ9RGQXAKHjjkSNywyng) “国际化”是指网站面向全球用户，而“多语言”是指网站不止一种语言。
+
+
+### 政采云前端周刊
+* [190期](https://weekly.zoo.team/detail/190) 3篇文章
+* [Svelte 异于 React 和 Vue 的那些亮点，应用到生产中里效果如何？](https://mp.weixin.qq.com/s/1G13SVGcNpBBuTyMOeTaRA) 重复博文，两周前奇舞周刊已收录
+* [Zag-基于状态机的组件库](https://mp.weixin.qq.com/s/9L2G5jyAA7RZxtH4hvLXew) Zag 是一个与框架无关的工具包，用于设计系统和 Web 应用程序中实现复杂、交互式和可访问的 UI 组件。
+* [离职的互联网人，都去哪儿了？](https://mp.weixin.qq.com/s/yH8iD5E8iakpIMLfV5pMCg) 2022互联网职业圈，1）从传统互联网，转向新能源、半导体；2）寻找下一代互联网，入局Web3、元宇宙
+
+### 周头条
+* IE浏览器， 2022.06.15（北京时间 2022.06.16） 正式关闭！（图片来源）
+* ![goodbye_ie](https://raw.githubusercontent.com/wteam-xq/testDemo/master/fe_blog/images/goodbye_ie
+.jpeg)
